--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>测试弹窗组件</title>
+	<link rel="stylesheet" href="./build/css/dialog.css">
 </head>
 <body>
 	<p>
@@ -35,10 +36,10 @@
 			</label>
 		</p>
 		<p>
-			<button type="button" id="btn">确定</button>
+			<button type="button" id="btn" class="btn btn-default">确定</button>
 		</p>
 	</form>
-
-	<script src="./build/webpack/test.js"></script>
+	
+	<script src="./build/webpack/test.bundle.js"></script>
 </body>
 </html>
