--- a/test.html
+++ b/test.html
@@ -17,6 +17,7 @@
 					<option value="alert">alert</option>
 					<option value="confirm">confirm</option>
 					<option value="load">load</option>
+					<option value="prompt">prompt</option>
 				</select>
 			</label>
 			<label>
