--- a/test.html
+++ b/test.html
@@ -42,6 +42,6 @@
 		</p>
 	</form>
 	
-	<script src="./build/webpack/entry.js"></script>
+	<script src="./build/webpack/bundle.js"></script>
 </body>
 </html>
